# Quantum-Information-Science-Project

./: .gitmodules  Breeding_Circuit_both.ipynb  Breeding_Circuit_p_eigen.ipynb  GKP_LIVIA.ipynb  Intro_to_Gaussian_States.ipynb  README.md  SCS_livia-kopi 2.ipynb  SCS_livia-kopi.ipynb  SCS_livia.ipynb  alex_2_breeding.ipynb  alex_breeding_circuit.ipynb  alex_breeding_circuit_modify.ipynb  changes.ipynb  final_livia_version.ipynb  livia_gkp.ipynb  main.py  pyproject.toml  second_version.ipynb
quantum_information_science_project_1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
